--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -14,7 +14,7 @@ msgstr ""
 "Language-Team: English (United Kingdom) <en_GB@li.org>\n"
 "Language: English (United Kingdom)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 
