--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1,4 +1,4 @@
-# Trnslations for YouTube scope for Unity Dash.
+# Translations for YouTube scope for Unity Dash.
 # Copyright (C) 2014 Canonical\ Ltd.
 # This file is distributed under the same license as the unity-scope-youtube package.
 # Pete Woods <pete.woods@canonical.com>, 2014.
@@ -16,7 +16,6 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 
 #: src/youtube/scope/query.cpp:643
 #, c-format
