--- a/po/es.po
+++ b/po/es.po
@@ -6,39 +6,75 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: unity-scope-youtube\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-11-18 16:31+0000\n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2014-11-18 17:24+0000\n"
 "PO-Revision-Date: 2014-09-29 18:28+0000\n"
 "Last-Translator: Leo Arias <leo.arias@canonical.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
-"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2014-11-04 07:27+0000\n"
-"X-Generator: Launchpad (build 17211)\n"
+"X-Launchpad-Export-Date: 2014-11-19 06:41+0000\n"
+"X-Generator: Launchpad (build 17252)\n"
 
-#: ../src/youtube/scope/query.cpp:658
-#, c-format
-msgid "1 result from YouTube"
-msgid_plural "%d results from YouTube"
-msgstr[0] "1 resultado de YouTube"
-msgstr[1] "%d resultados de YouTube"
+#: ../data/com.ubuntu.scopes.youtube.ini.in.h:1
+#: ../src/youtube/scope/query.cpp:508
+msgid "YouTube"
+msgstr "YouTube"
 
-#: ../src/youtube/scope/query.cpp:232
+#: ../data/com.ubuntu.scopes.youtube.ini.in.h:2
+msgid "Search YouTube for videos and browse channels"
+msgstr ""
+
+#: ../src/youtube/scope/query.cpp:235
 #, c-format
 msgid "1 subscriber"
 msgid_plural "%d subscribers"
 msgstr[0] "1 suscriptor"
 msgstr[1] "%d suscriptores"
 
-#: ../src/youtube/scope/query.cpp:253
+#: ../src/youtube/scope/query.cpp:256
 #, c-format
 msgid "1 video"
 msgid_plural "%d videos"
 msgstr[0] "1 vídeo"
 msgstr[1] "%d vídeos"
+
+#: ../src/youtube/scope/query.cpp:303
+msgid "Log-in to YouTube"
+msgstr "Iniciar sesión en YouTube"
+
+#: ../src/youtube/scope/query.cpp:392 ../src/youtube/scope/query.cpp:552
+msgid "Videos"
+msgstr "Vídeos"
+
+#: ../src/youtube/scope/query.cpp:424 ../src/youtube/scope/query.cpp:564
+msgid "Channels"
+msgstr "Canales"
+
+#: ../src/youtube/scope/query.cpp:443 ../src/youtube/scope/query.cpp:558
+msgid "Playlists"
+msgstr "Listas de reproducción"
+
+#: ../src/youtube/scope/query.cpp:476
+msgid "Playlist contents"
+msgstr "Contenidos de la lista"
+
+#: ../src/youtube/scope/query.cpp:493
+msgid "Channel contents"
+msgstr "Contenidos del canal"
+
+#: ../src/youtube/scope/query.cpp:687
+#, c-format
+msgid "1 result from YouTube"
+msgid_plural "%d results from YouTube"
+msgstr[0] "1 resultado de YouTube"
+msgstr[1] "%d resultados de YouTube"
+
+#: ../src/youtube/scope/query.cpp:701
+msgid "YouTube requires an internet connection"
+msgstr "YouTube necesita una conexión a Internet"
 
 #: ../src/youtube/scope/preview.cpp:77
 #, c-format
@@ -46,40 +82,3 @@ msgid "1 view"
 msgid_plural "%d views"
 msgstr[0] "1 visualización"
 msgstr[1] "%d visualizaciones"
-
-#: ../src/youtube/scope/query.cpp:487
-msgid "Channel contents"
-msgstr "Contenidos del canal"
-
-#: ../src/youtube/scope/query.cpp:418 ../src/youtube/scope/query.cpp:558
-msgid "Channels"
-msgstr "Canales"
-
-#: ../src/youtube/scope/query.cpp:297
-msgid "Log-in to YouTube"
-msgstr "Iniciar sesión en YouTube"
-
-#: ../src/youtube/scope/query.cpp:470
-msgid "Playlist contents"
-msgstr "Contenidos de la lista"
-
-#: ../src/youtube/scope/query.cpp:437 ../src/youtube/scope/query.cpp:552
-msgid "Playlists"
-msgstr "Listas de reproducción"
-
-#: ../data/com.ubuntu.scopes.youtube.ini.in.h:2
-msgid "Search YouTube for videos and browse channels"
-msgstr ""
-
-#: ../src/youtube/scope/query.cpp:386 ../src/youtube/scope/query.cpp:546
-msgid "Videos"
-msgstr "Vídeos"
-
-#: ../data/com.ubuntu.scopes.youtube.ini.in.h:1
-#: ../src/youtube/scope/query.cpp:502
-msgid "YouTube"
-msgstr "YouTube"
-
-#: ../src/youtube/scope/query.cpp:672
-msgid "YouTube requires an internet connection"
-msgstr "YouTube necesita una conexión a Internet"
