--- a/po/es.po
+++ b/po/es.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: unity-scope-youtube\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-11-18 17:24+0000\n"
-"PO-Revision-Date: 2014-09-29 18:28+0000\n"
-"Last-Translator: Leo Arias <leo.arias@canonical.com>\n"
+"PO-Revision-Date: 2015-01-04 04:02+0000\n"
+"Last-Translator: Adolfo Jayme <fitoschido@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2014-12-12 06:51+0000\n"
+"X-Launchpad-Export-Date: 2015-01-04 06:42+0000\n"
 "X-Generator: Launchpad (build 17286)\n"
 
 #: ../data/com.ubuntu.scopes.youtube.ini.in.h:1
@@ -25,7 +25,7 @@ msgstr "YouTube"
 
 #: ../data/com.ubuntu.scopes.youtube.ini.in.h:2
 msgid "Search YouTube for videos and browse channels"
-msgstr ""
+msgstr "Buscar vídeos y explorar canales de YouTube"
 
 #: ../src/youtube/scope/query.cpp:235
 #, c-format
