--- a/po/es.po
+++ b/po/es.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: unity-scope-youtube\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-11-18 17:24+0000\n"
-"PO-Revision-Date: 2015-01-04 04:02+0000\n"
+"PO-Revision-Date: 2015-02-17 06:59+0000\n"
 "Last-Translator: Adolfo Jayme <fitoschido@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2015-01-05 07:08+0000\n"
-"X-Generator: Launchpad (build 17286)\n"
+"X-Launchpad-Export-Date: 2015-02-19 05:41+0000\n"
+"X-Generator: Launchpad (build 17341)\n"
 
 #: ../data/com.ubuntu.scopes.youtube.ini.in.h:1
 #: ../src/youtube/scope/query.cpp:508
@@ -59,11 +59,11 @@ msgstr "Listas de reproducción"
 
 #: ../src/youtube/scope/query.cpp:476
 msgid "Playlist contents"
-msgstr "Contenidos de la lista"
+msgstr "Contenido de la lista"
 
 #: ../src/youtube/scope/query.cpp:493
 msgid "Channel contents"
-msgstr "Contenidos del canal"
+msgstr "Contenido del canal"
 
 #: ../src/youtube/scope/query.cpp:687
 #, c-format
