Translation line numbers updated

--- a/po/sl.po
+++ b/po/sl.po
@@ -6,71 +6,21 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: unity-scope-youtube\n"
-"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2014-11-18 17:24+0000\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2015-05-25 11:02+0100\n"
 "PO-Revision-Date: 2015-05-01 12:16+0000\n"
 "Last-Translator: Sasa Batistic <Unknown>\n"
 "Language-Team: Slovenian <sl@li.org>\n"
+"Language: sl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%100==1 ? 1 : n%100==2 ? 2 : n%100==3 || "
-"n%100==4 ? 3 : 0);\n"
+"Plural-Forms: nplurals=4; plural=(n%100==1 ? 1 : n%100==2 ? 2 : n%100==3 || n"
+"%100==4 ? 3 : 0);\n"
 "X-Launchpad-Export-Date: 2015-05-02 05:37+0000\n"
 "X-Generator: Launchpad (build 17474)\n"
 
-#: ../data/com.ubuntu.scopes.youtube.ini.in.h:1
-#: ../src/youtube/scope/query.cpp:508
-msgid "YouTube"
-msgstr "YouTube"
-
-#: ../data/com.ubuntu.scopes.youtube.ini.in.h:2
-msgid "Search YouTube for videos and browse channels"
-msgstr "Poiščite videoposnetke v YouTube in brskajte po kanalih"
-
-#: ../src/youtube/scope/query.cpp:235
-#, c-format
-msgid "1 subscriber"
-msgid_plural "%d subscribers"
-msgstr[0] "%d naročnikov"
-msgstr[1] "1 naročnik"
-msgstr[2] "%d naročnika"
-msgstr[3] "%d naročniki"
-
-#: ../src/youtube/scope/query.cpp:256
-#, c-format
-msgid "1 video"
-msgid_plural "%d videos"
-msgstr[0] "%d videoposnetkov"
-msgstr[1] "1 videoposnetek"
-msgstr[2] "%d videoposnetka"
-msgstr[3] "%d videoposnetki"
-
-#: ../src/youtube/scope/query.cpp:303
-msgid "Log-in to YouTube"
-msgstr "Prijavite se v YouTube"
-
-#: ../src/youtube/scope/query.cpp:392 ../src/youtube/scope/query.cpp:552
-msgid "Videos"
-msgstr "Videoposnetki"
-
-#: ../src/youtube/scope/query.cpp:424 ../src/youtube/scope/query.cpp:564
-msgid "Channels"
-msgstr "Kanali"
-
-#: ../src/youtube/scope/query.cpp:443 ../src/youtube/scope/query.cpp:558
-msgid "Playlists"
-msgstr "Seznami predvajanja"
-
-#: ../src/youtube/scope/query.cpp:476
-msgid "Playlist contents"
-msgstr "Vsebina seznama predvajanja"
-
-#: ../src/youtube/scope/query.cpp:493
-msgid "Channel contents"
-msgstr "Vsebina kanalov"
-
-#: ../src/youtube/scope/query.cpp:687
+#: ../src/youtube/scope/query.cpp:858
 #, c-format
 msgid "1 result from YouTube"
 msgid_plural "%d results from YouTube"
@@ -79,11 +29,25 @@ msgstr[1] "1 rezultat v YouTube"
 msgstr[2] "%d rezultata v YouTube"
 msgstr[3] "%d rezultati v YouTube"
 
-#: ../src/youtube/scope/query.cpp:701
-msgid "YouTube requires an internet connection"
-msgstr "YouTube zahteva internetno povezavo"
+#: ../src/youtube/scope/query.cpp:269
+#, c-format
+msgid "1 subscriber"
+msgid_plural "%d subscribers"
+msgstr[0] "%d naročnikov"
+msgstr[1] "1 naročnik"
+msgstr[2] "%d naročnika"
+msgstr[3] "%d naročniki"
 
-#: ../src/youtube/scope/preview.cpp:77
+#: ../src/youtube/scope/query.cpp:308
+#, c-format
+msgid "1 video"
+msgid_plural "%d videos"
+msgstr[0] "%d videoposnetkov"
+msgstr[1] "1 videoposnetek"
+msgstr[2] "%d videoposnetka"
+msgstr[3] "%d videoposnetki"
+
+#: ../src/youtube/scope/preview.cpp:78
 #, c-format
 msgid "1 view"
 msgid_plural "%d views"
@@ -91,3 +55,48 @@ msgstr[0] "%d ogledov"
 msgstr[1] "1 ogled"
 msgstr[2] "%d ogleda"
 msgstr[3] "%d ogledi"
+
+#: ../src/youtube/scope/query.cpp:596
+msgid "Channel contents"
+msgstr "Vsebina kanalov"
+
+#: ../src/youtube/scope/query.cpp:527 ../src/youtube/scope/query.cpp:725
+msgid "Channels"
+msgstr "Kanali"
+
+#: ../src/youtube/scope/query.cpp:357
+msgid "Log-in to YouTube"
+msgstr "Prijavite se v YouTube"
+
+#: ../src/youtube/scope/query.cpp:643 ../src/youtube/scope/query.cpp:685
+msgid "My Subscriptions"
+msgstr ""
+
+#: ../src/youtube/scope/query.cpp:579
+msgid "Playlist contents"
+msgstr "Vsebina seznama predvajanja"
+
+#: ../src/youtube/scope/query.cpp:546 ../src/youtube/scope/query.cpp:719
+msgid "Playlists"
+msgstr "Seznami predvajanja"
+
+#: ../data/com.ubuntu.scopes.youtube.ini.in.h:2
+msgid "Search YouTube for videos and browse channels"
+msgstr "Poiščite videoposnetke v YouTube in brskajte po kanalih"
+
+#: ../src/youtube/scope/query.cpp:475
+msgid "Uploads"
+msgstr ""
+
+#: ../src/youtube/scope/query.cpp:495 ../src/youtube/scope/query.cpp:713
+msgid "Videos"
+msgstr "Videoposnetki"
+
+#: ../data/com.ubuntu.scopes.youtube.ini.in.h:1
+#: ../src/youtube/scope/query.cpp:611
+msgid "YouTube"
+msgstr "YouTube"
+
+#: ../src/youtube/scope/query.cpp:872
+msgid "YouTube requires an internet connection"
+msgstr "YouTube zahteva internetno povezavo"
