--- a/po/fr.po
+++ b/po/fr.po
@@ -6,11 +6,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: unity-scope-youtube\n"
-"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2014-11-18 17:24+0000\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2015-05-25 11:02+0100\n"
 "PO-Revision-Date: 2015-05-10 12:49+0000\n"
 "Last-Translator: Anne <anneonyme017@gmail.com>\n"
 "Language-Team: French <fr@li.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -18,67 +19,75 @@ msgstr ""
 "X-Launchpad-Export-Date: 2015-05-11 05:52+0000\n"
 "X-Generator: Launchpad (build 17487)\n"
 
-#: ../data/com.ubuntu.scopes.youtube.ini.in.h:1
-#: ../src/youtube/scope/query.cpp:508
-msgid "YouTube"
-msgstr "YouTube"
-
-#: ../data/com.ubuntu.scopes.youtube.ini.in.h:2
-msgid "Search YouTube for videos and browse channels"
-msgstr "Recherchez des vidéos sur YouTube et parcourez des chaînes"
-
-#: ../src/youtube/scope/query.cpp:235
-#, c-format
-msgid "1 subscriber"
-msgid_plural "%d subscribers"
-msgstr[0] "1 abonné"
-msgstr[1] "%d abonnés"
-
-#: ../src/youtube/scope/query.cpp:256
-#, c-format
-msgid "1 video"
-msgid_plural "%d videos"
-msgstr[0] "1 vidéo"
-msgstr[1] "%d vidéos"
-
-#: ../src/youtube/scope/query.cpp:303
-msgid "Log-in to YouTube"
-msgstr "Se connecter à YouTube"
-
-#: ../src/youtube/scope/query.cpp:392 ../src/youtube/scope/query.cpp:552
-msgid "Videos"
-msgstr "Vidéos"
-
-#: ../src/youtube/scope/query.cpp:424 ../src/youtube/scope/query.cpp:564
-msgid "Channels"
-msgstr "Chaînes"
-
-#: ../src/youtube/scope/query.cpp:443 ../src/youtube/scope/query.cpp:558
-msgid "Playlists"
-msgstr "Listes de lecture"
-
-#: ../src/youtube/scope/query.cpp:476
-msgid "Playlist contents"
-msgstr "Contenus de la liste de lecture"
-
-#: ../src/youtube/scope/query.cpp:493
-msgid "Channel contents"
-msgstr "Contenus de la chaîne"
-
-#: ../src/youtube/scope/query.cpp:687
+#: ../src/youtube/scope/query.cpp:858
 #, c-format
 msgid "1 result from YouTube"
 msgid_plural "%d results from YouTube"
 msgstr[0] "1 résultat sur YouTube"
 msgstr[1] "%d résultats sur YouTube"
 
-#: ../src/youtube/scope/query.cpp:701
-msgid "YouTube requires an internet connection"
-msgstr "YouTube a besoin d'une connexion à Internet"
+#: ../src/youtube/scope/query.cpp:269
+#, c-format
+msgid "1 subscriber"
+msgid_plural "%d subscribers"
+msgstr[0] "1 abonné"
+msgstr[1] "%d abonnés"
 
-#: ../src/youtube/scope/preview.cpp:77
+#: ../src/youtube/scope/query.cpp:308
+#, c-format
+msgid "1 video"
+msgid_plural "%d videos"
+msgstr[0] "1 vidéo"
+msgstr[1] "%d vidéos"
+
+#: ../src/youtube/scope/preview.cpp:78
 #, c-format
 msgid "1 view"
 msgid_plural "%d views"
 msgstr[0] "1 vue"
 msgstr[1] "%d vues"
+
+#: ../src/youtube/scope/query.cpp:596
+msgid "Channel contents"
+msgstr "Contenus de la chaîne"
+
+#: ../src/youtube/scope/query.cpp:527 ../src/youtube/scope/query.cpp:725
+msgid "Channels"
+msgstr "Chaînes"
+
+#: ../src/youtube/scope/query.cpp:357
+msgid "Log-in to YouTube"
+msgstr "Se connecter à YouTube"
+
+#: ../src/youtube/scope/query.cpp:643 ../src/youtube/scope/query.cpp:685
+msgid "My Subscriptions"
+msgstr ""
+
+#: ../src/youtube/scope/query.cpp:579
+msgid "Playlist contents"
+msgstr "Contenus de la liste de lecture"
+
+#: ../src/youtube/scope/query.cpp:546 ../src/youtube/scope/query.cpp:719
+msgid "Playlists"
+msgstr "Listes de lecture"
+
+#: ../data/com.ubuntu.scopes.youtube.ini.in.h:2
+msgid "Search YouTube for videos and browse channels"
+msgstr "Recherchez des vidéos sur YouTube et parcourez des chaînes"
+
+#: ../src/youtube/scope/query.cpp:475
+msgid "Uploads"
+msgstr ""
+
+#: ../src/youtube/scope/query.cpp:495 ../src/youtube/scope/query.cpp:713
+msgid "Videos"
+msgstr "Vidéos"
+
+#: ../data/com.ubuntu.scopes.youtube.ini.in.h:1
+#: ../src/youtube/scope/query.cpp:611
+msgid "YouTube"
+msgstr "YouTube"
+
+#: ../src/youtube/scope/query.cpp:872
+msgid "YouTube requires an internet connection"
+msgstr "YouTube a besoin d'une connexion à Internet"
