--- a/po/es.po
+++ b/po/es.po
@@ -6,25 +6,26 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: unity-scope-youtube\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-05-25 11:02+0100\n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2015-05-25 11:06+0100\n"
 "PO-Revision-Date: 2015-02-17 06:59+0000\n"
 "Last-Translator: Adolfo Jayme <fitoschido@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
-"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2015-02-19 05:41+0000\n"
-"X-Generator: Launchpad (build 17341)\n"
+"X-Launchpad-Export-Date: 2015-05-26 05:54+0000\n"
+"X-Generator: Launchpad (build 17514)\n"
 
-#: ../src/youtube/scope/query.cpp:858
-#, c-format
-msgid "1 result from YouTube"
-msgid_plural "%d results from YouTube"
-msgstr[0] "1 resultado de YouTube"
-msgstr[1] "%d resultados de YouTube"
+#: ../data/com.ubuntu.scopes.youtube.ini.in.h:1
+#: ../src/youtube/scope/query.cpp:611
+msgid "YouTube"
+msgstr "YouTube"
+
+#: ../data/com.ubuntu.scopes.youtube.ini.in.h:2
+msgid "Search YouTube for videos and browse channels"
+msgstr "Buscar vídeos y explorar canales de YouTube"
 
 #: ../src/youtube/scope/query.cpp:269
 #, c-format
@@ -40,40 +41,9 @@ msgid_plural "%d videos"
 msgstr[0] "1 vídeo"
 msgstr[1] "%d vídeos"
 
-#: ../src/youtube/scope/preview.cpp:78
-#, c-format
-msgid "1 view"
-msgid_plural "%d views"
-msgstr[0] "1 visualización"
-msgstr[1] "%d visualizaciones"
-
-#: ../src/youtube/scope/query.cpp:596
-msgid "Channel contents"
-msgstr "Contenido del canal"
-
-#: ../src/youtube/scope/query.cpp:527 ../src/youtube/scope/query.cpp:725
-msgid "Channels"
-msgstr "Canales"
-
 #: ../src/youtube/scope/query.cpp:357
 msgid "Log-in to YouTube"
 msgstr "Iniciar sesión en YouTube"
-
-#: ../src/youtube/scope/query.cpp:643 ../src/youtube/scope/query.cpp:685
-msgid "My Subscriptions"
-msgstr ""
-
-#: ../src/youtube/scope/query.cpp:579
-msgid "Playlist contents"
-msgstr "Contenido de la lista"
-
-#: ../src/youtube/scope/query.cpp:546 ../src/youtube/scope/query.cpp:719
-msgid "Playlists"
-msgstr "Listas de reproducción"
-
-#: ../data/com.ubuntu.scopes.youtube.ini.in.h:2
-msgid "Search YouTube for videos and browse channels"
-msgstr "Buscar vídeos y explorar canales de YouTube"
 
 #: ../src/youtube/scope/query.cpp:475
 msgid "Uploads"
@@ -83,11 +53,40 @@ msgstr ""
 msgid "Videos"
 msgstr "Vídeos"
 
-#: ../data/com.ubuntu.scopes.youtube.ini.in.h:1
-#: ../src/youtube/scope/query.cpp:611
-msgid "YouTube"
-msgstr "YouTube"
+#: ../src/youtube/scope/query.cpp:527 ../src/youtube/scope/query.cpp:725
+msgid "Channels"
+msgstr "Canales"
+
+#: ../src/youtube/scope/query.cpp:546 ../src/youtube/scope/query.cpp:719
+msgid "Playlists"
+msgstr "Listas de reproducción"
+
+#: ../src/youtube/scope/query.cpp:579
+msgid "Playlist contents"
+msgstr "Contenido de la lista"
+
+#: ../src/youtube/scope/query.cpp:596
+msgid "Channel contents"
+msgstr "Contenido del canal"
+
+#: ../src/youtube/scope/query.cpp:643 ../src/youtube/scope/query.cpp:685
+msgid "My Subscriptions"
+msgstr ""
+
+#: ../src/youtube/scope/query.cpp:858
+#, c-format
+msgid "1 result from YouTube"
+msgid_plural "%d results from YouTube"
+msgstr[0] "1 resultado de YouTube"
+msgstr[1] "%d resultados de YouTube"
 
 #: ../src/youtube/scope/query.cpp:872
 msgid "YouTube requires an internet connection"
 msgstr "YouTube necesita una conexión a Internet"
+
+#: ../src/youtube/scope/preview.cpp:78
+#, c-format
+msgid "1 view"
+msgid_plural "%d views"
+msgstr[0] "1 visualización"
+msgstr[1] "%d visualizaciones"
