--- a/po/fr.po
+++ b/po/fr.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: unity-scope-youtube\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-05-25 11:06+0100\n"
-"PO-Revision-Date: 2015-05-10 12:49+0000\n"
+"PO-Revision-Date: 2015-10-21 20:57+0000\n"
 "Last-Translator: Anne <anneonyme017@gmail.com>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Launchpad-Export-Date: 2015-05-26 05:54+0000\n"
-"X-Generator: Launchpad (build 17514)\n"
+"X-Launchpad-Export-Date: 2015-10-22 05:56+0000\n"
+"X-Generator: Launchpad (build 17812)\n"
 
 #: ../data/com.ubuntu.scopes.youtube.ini.in.h:1
 #: ../src/youtube/scope/query.cpp:611
@@ -47,7 +47,7 @@ msgstr "Se connecter à YouTube"
 
 #: ../src/youtube/scope/query.cpp:475
 msgid "Uploads"
-msgstr ""
+msgstr "Téléversements"
 
 #: ../src/youtube/scope/query.cpp:495 ../src/youtube/scope/query.cpp:713
 msgid "Videos"
@@ -71,7 +71,7 @@ msgstr "Contenus de la chaîne"
 
 #: ../src/youtube/scope/query.cpp:643 ../src/youtube/scope/query.cpp:685
 msgid "My Subscriptions"
-msgstr ""
+msgstr "Mes abonnements"
 
 #: ../src/youtube/scope/query.cpp:858
 #, c-format
