--- a/po/br.po
+++ b/po/br.po
@@ -1,27 +1,27 @@
-# Friulian translation for unity-scope-youtube
-# Copyright (c) 2015 Rosetta Contributors and Canonical Ltd 2015
+# Breton translation for unity-scope-youtube
+# Copyright (c) 2016 Rosetta Contributors and Canonical Ltd 2016
 # This file is distributed under the same license as the unity-scope-youtube package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2015.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2016.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: unity-scope-youtube\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2016-08-19 09:13+0000\n"
-"PO-Revision-Date: 2015-01-28 16:31+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Friulian <fur@li.org>\n"
+"PO-Revision-Date: 2016-08-19 12:06+0000\n"
+"Last-Translator: Rouxel <vincent.rouxel@mailoo.org>\n"
+"Language-Team: Breton <br@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"Plural-Forms: nplurals=2; plural=n > 1;\n"
 "X-Launchpad-Export-Date: 2016-08-20 06:13+0000\n"
 "X-Generator: Launchpad (build 18176)\n"
 
 #: ../data/com.ubuntu.scopes.youtube.ini.in.h:1
 #: ../src/youtube/scope/query.cpp:733
 msgid "YouTube"
-msgstr ""
+msgstr "YouTube"
 
 #: ../data/com.ubuntu.scopes.youtube.ini.in.h:2
 msgid "Search YouTube for videos and browse channels"
@@ -29,7 +29,7 @@ msgstr ""
 
 #: ../src/youtube/scope/query.cpp:309 ../src/youtube/scope/query.cpp:778
 msgid "Favorites"
-msgstr ""
+msgstr "Gwellañ deuet"
 
 #: ../src/youtube/scope/query.cpp:310 ../src/youtube/scope/query.cpp:779
 msgid "Watch Later"
@@ -39,8 +39,7 @@ msgstr ""
 #, c-format
 msgid "1 subscriber"
 msgid_plural "%d subscribers"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 c'houmananter"
 
 #: ../src/youtube/scope/query.cpp:360
 #, c-format
@@ -71,7 +70,7 @@ msgstr ""
 
 #: ../src/youtube/scope/query.cpp:585 ../src/youtube/scope/query.cpp:889
 msgid "Videos"
-msgstr ""
+msgstr "Videoioù"
 
 #: ../src/youtube/scope/query.cpp:612
 msgid "No video can be found in this channel"
@@ -79,7 +78,7 @@ msgstr ""
 
 #: ../src/youtube/scope/query.cpp:623 ../src/youtube/scope/query.cpp:901
 msgid "Channels"
-msgstr ""
+msgstr "Sanelloù"
 
 #: ../src/youtube/scope/query.cpp:637
 msgid "No channel can be found"
@@ -87,7 +86,7 @@ msgstr ""
 
 #: ../src/youtube/scope/query.cpp:648 ../src/youtube/scope/query.cpp:895
 msgid "Playlists"
-msgstr ""
+msgstr "Rolloù-tonioù"
 
 #: ../src/youtube/scope/query.cpp:676
 msgid "No playlist can be found in this channel"
@@ -107,7 +106,7 @@ msgstr ""
 
 #: ../src/youtube/scope/query.cpp:777
 msgid "Likes"
-msgstr ""
+msgstr "Plijet"
 
 #: ../src/youtube/scope/query.cpp:798 ../src/youtube/scope/query.cpp:840
 msgid "My Subscriptions"
@@ -142,7 +141,7 @@ msgstr ""
 
 #: ../src/youtube/scope/preview.cpp:108
 msgid "open"
-msgstr ""
+msgstr "Digeriñ"
 
 #: ../src/youtube/scope/preview.cpp:109
 msgid "Login to youtube"
@@ -150,11 +149,11 @@ msgstr ""
 
 #: ../src/youtube/scope/preview.cpp:130
 msgid "Unsubscribe"
-msgstr ""
+msgstr "Ankoumanatiñ"
 
 #: ../src/youtube/scope/preview.cpp:130
 msgid "Subscribe"
-msgstr ""
+msgstr "En em enrollañ"
 
 #: ../src/youtube/scope/preview.cpp:134
 msgid "Thumb up"
@@ -178,7 +177,7 @@ msgstr ""
 
 #: ../src/youtube/scope/preview.cpp:161
 msgid "Post"
-msgstr ""
+msgstr "Kas"
 
 #: ../src/youtube/scope/preview.cpp:290
 msgid "View in browser"
