--- a/po/de.po
+++ b/po/de.po
@@ -7,86 +7,179 @@ msgid ""
 msgstr ""
 "Project-Id-Version: unity-scope-youtube\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2015-05-25 11:06+0100\n"
-"PO-Revision-Date: 2015-05-20 10:01+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2016-08-19 09:13+0000\n"
+"PO-Revision-Date: 2016-08-19 11:11+0000\n"
+"Last-Translator: Phillip Sz <Unknown>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2016-04-01 05:58+0000\n"
-"X-Generator: Launchpad (build 17972)\n"
+"X-Launchpad-Export-Date: 2016-08-20 06:13+0000\n"
+"X-Generator: Launchpad (build 18176)\n"
 
 #: ../data/com.ubuntu.scopes.youtube.ini.in.h:1
-#: ../src/youtube/scope/query.cpp:611
+#: ../src/youtube/scope/query.cpp:733
 msgid "YouTube"
-msgstr ""
+msgstr "YouTube"
 
 #: ../data/com.ubuntu.scopes.youtube.ini.in.h:2
 msgid "Search YouTube for videos and browse channels"
-msgstr ""
+msgstr "Durchsuche YouTube nach Videos und Kanälen"
 
-#: ../src/youtube/scope/query.cpp:269
+#: ../src/youtube/scope/query.cpp:309 ../src/youtube/scope/query.cpp:778
+msgid "Favorites"
+msgstr "Favoriten"
+
+#: ../src/youtube/scope/query.cpp:310 ../src/youtube/scope/query.cpp:779
+msgid "Watch Later"
+msgstr "Später ansehen"
+
+#: ../src/youtube/scope/query.cpp:321
 #, c-format
 msgid "1 subscriber"
 msgid_plural "%d subscribers"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 Abonnent"
+msgstr[1] "%d Abonnenten"
 
-#: ../src/youtube/scope/query.cpp:308
+#: ../src/youtube/scope/query.cpp:360
 #, c-format
 msgid "1 video"
 msgid_plural "%d videos"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 Video"
+msgstr[1] "%d Videos"
 
-#: ../src/youtube/scope/query.cpp:357
+#: ../src/youtube/scope/query.cpp:403
+msgid "</b> videos"
+msgstr ""
+
+#: ../src/youtube/scope/query.cpp:404
+msgid "</b> views"
+msgstr ""
+
+#: ../src/youtube/scope/query.cpp:405
+msgid "</b> subscribers"
+msgstr ""
+
+#: ../src/youtube/scope/query.cpp:460
 msgid "Log-in to YouTube"
-msgstr ""
+msgstr "Bei YouTube anmelden"
 
-#: ../src/youtube/scope/query.cpp:475
+#: ../src/youtube/scope/query.cpp:565
 msgid "Uploads"
-msgstr ""
+msgstr "Hochgeladene Videos"
 
-#: ../src/youtube/scope/query.cpp:495 ../src/youtube/scope/query.cpp:713
+#: ../src/youtube/scope/query.cpp:585 ../src/youtube/scope/query.cpp:889
 msgid "Videos"
+msgstr "Videos"
+
+#: ../src/youtube/scope/query.cpp:612
+msgid "No video can be found in this channel"
 msgstr ""
 
-#: ../src/youtube/scope/query.cpp:527 ../src/youtube/scope/query.cpp:725
+#: ../src/youtube/scope/query.cpp:623 ../src/youtube/scope/query.cpp:901
 msgid "Channels"
+msgstr "Kanäle"
+
+#: ../src/youtube/scope/query.cpp:637
+msgid "No channel can be found"
 msgstr ""
 
-#: ../src/youtube/scope/query.cpp:546 ../src/youtube/scope/query.cpp:719
+#: ../src/youtube/scope/query.cpp:648 ../src/youtube/scope/query.cpp:895
 msgid "Playlists"
+msgstr "Wiedergabelisten"
+
+#: ../src/youtube/scope/query.cpp:676
+msgid "No playlist can be found in this channel"
 msgstr ""
 
-#: ../src/youtube/scope/query.cpp:579
+#: ../src/youtube/scope/query.cpp:687
 msgid "Playlist contents"
-msgstr ""
+msgstr "Wiedergabelisten"
 
-#: ../src/youtube/scope/query.cpp:596
+#: ../src/youtube/scope/query.cpp:704
 msgid "Channel contents"
+msgstr "Kanäle"
+
+#: ../src/youtube/scope/query.cpp:724
+msgid "No video can be found"
 msgstr ""
 
-#: ../src/youtube/scope/query.cpp:643 ../src/youtube/scope/query.cpp:685
+#: ../src/youtube/scope/query.cpp:777
+msgid "Likes"
+msgstr "Gefällt mir"
+
+#: ../src/youtube/scope/query.cpp:798 ../src/youtube/scope/query.cpp:840
 msgid "My Subscriptions"
+msgstr "Meine Abos"
+
+#: ../src/youtube/scope/query.cpp:808 ../src/youtube/scope/query.cpp:861
+msgid "My Playlist"
 msgstr ""
 
-#: ../src/youtube/scope/query.cpp:858
+#: ../src/youtube/scope/query.cpp:1035
 #, c-format
 msgid "1 result from YouTube"
 msgid_plural "%d results from YouTube"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 Ergebnis auf YouTube"
+msgstr[1] "%d Ergebnisse auf YouTube"
 
-#: ../src/youtube/scope/query.cpp:872
+#: ../src/youtube/scope/query.cpp:1049
 msgid "YouTube requires an internet connection"
+msgstr "Für YouTube ist eine Internetverbindung erforderlich"
+
+#: ../src/youtube/scope/preview.cpp:79
+msgid " views"
 msgstr ""
 
-#: ../src/youtube/scope/preview.cpp:78
-#, c-format
-msgid "1 view"
-msgid_plural "%d views"
-msgstr[0] ""
-msgstr[1] ""
+#: ../src/youtube/scope/preview.cpp:97
+msgid "<br/>  Published on: </b>"
+msgstr ""
+
+#: ../src/youtube/scope/preview.cpp:102
+msgid "Please login to post a comment  "
+msgstr ""
+
+#: ../src/youtube/scope/preview.cpp:108
+msgid "open"
+msgstr ""
+
+#: ../src/youtube/scope/preview.cpp:109
+msgid "Login to youtube"
+msgstr ""
+
+#: ../src/youtube/scope/preview.cpp:130
+msgid "Unsubscribe"
+msgstr "Deabonnieren"
+
+#: ../src/youtube/scope/preview.cpp:130
+msgid "Subscribe"
+msgstr "Abonnieren"
+
+#: ../src/youtube/scope/preview.cpp:134
+msgid "Thumb up"
+msgstr ""
+
+#: ../src/youtube/scope/preview.cpp:138
+msgid "Thumb down"
+msgstr ""
+
+#: ../src/youtube/scope/preview.cpp:142
+msgid "Add to watch list"
+msgstr "Zur Beobachtungsliste hinzufügen"
+
+#: ../src/youtube/scope/preview.cpp:146
+msgid "Add to favorites list"
+msgstr ""
+
+#: ../src/youtube/scope/preview.cpp:152 ../src/youtube/scope/preview.cpp:297
+msgid "User channel"
+msgstr ""
+
+#: ../src/youtube/scope/preview.cpp:161
+msgid "Post"
+msgstr "Nachricht hinterlassen"
+
+#: ../src/youtube/scope/preview.cpp:290
+msgid "View in browser"
+msgstr "Ansicht im Browser"
