--- a/po/es.po
+++ b/po/es.po
@@ -7,19 +7,19 @@ msgid ""
 msgstr ""
 "Project-Id-Version: unity-scope-youtube\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2015-05-25 11:06+0100\n"
-"PO-Revision-Date: 2015-10-22 18:14+0000\n"
-"Last-Translator: Víctor R. Ruiz <Unknown>\n"
+"POT-Creation-Date: 2016-08-19 09:13+0000\n"
+"PO-Revision-Date: 2016-08-19 09:50+0000\n"
+"Last-Translator: Paco Molinero <paco@byasl.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2016-04-01 05:58+0000\n"
-"X-Generator: Launchpad (build 17972)\n"
+"X-Launchpad-Export-Date: 2016-08-20 06:13+0000\n"
+"X-Generator: Launchpad (build 18176)\n"
 
 #: ../data/com.ubuntu.scopes.youtube.ini.in.h:1
-#: ../src/youtube/scope/query.cpp:611
+#: ../src/youtube/scope/query.cpp:733
 msgid "YouTube"
 msgstr "YouTube"
 
@@ -27,66 +27,159 @@ msgstr "YouTube"
 msgid "Search YouTube for videos and browse channels"
 msgstr "Buscar vídeos y explorar canales de YouTube"
 
-#: ../src/youtube/scope/query.cpp:269
+#: ../src/youtube/scope/query.cpp:309 ../src/youtube/scope/query.cpp:778
+msgid "Favorites"
+msgstr "Favoritos"
+
+#: ../src/youtube/scope/query.cpp:310 ../src/youtube/scope/query.cpp:779
+msgid "Watch Later"
+msgstr "Ver más tarde"
+
+#: ../src/youtube/scope/query.cpp:321
 #, c-format
 msgid "1 subscriber"
 msgid_plural "%d subscribers"
 msgstr[0] "1 suscriptor"
 msgstr[1] "%d suscriptores"
 
-#: ../src/youtube/scope/query.cpp:308
+#: ../src/youtube/scope/query.cpp:360
 #, c-format
 msgid "1 video"
 msgid_plural "%d videos"
 msgstr[0] "1 vídeo"
 msgstr[1] "%d vídeos"
 
-#: ../src/youtube/scope/query.cpp:357
+#: ../src/youtube/scope/query.cpp:403
+msgid "</b> videos"
+msgstr "</b> vídeos"
+
+#: ../src/youtube/scope/query.cpp:404
+msgid "</b> views"
+msgstr "</b> vistas"
+
+#: ../src/youtube/scope/query.cpp:405
+msgid "</b> subscribers"
+msgstr "</b> suscriptores"
+
+#: ../src/youtube/scope/query.cpp:460
 msgid "Log-in to YouTube"
 msgstr "Iniciar sesión en YouTube"
 
-#: ../src/youtube/scope/query.cpp:475
+#: ../src/youtube/scope/query.cpp:565
 msgid "Uploads"
 msgstr "Vídeos subidos"
 
-#: ../src/youtube/scope/query.cpp:495 ../src/youtube/scope/query.cpp:713
+#: ../src/youtube/scope/query.cpp:585 ../src/youtube/scope/query.cpp:889
 msgid "Videos"
 msgstr "Vídeos"
 
-#: ../src/youtube/scope/query.cpp:527 ../src/youtube/scope/query.cpp:725
+#: ../src/youtube/scope/query.cpp:612
+msgid "No video can be found in this channel"
+msgstr "No se ha encontrado ningún vídeo en este canal"
+
+#: ../src/youtube/scope/query.cpp:623 ../src/youtube/scope/query.cpp:901
 msgid "Channels"
 msgstr "Canales"
 
-#: ../src/youtube/scope/query.cpp:546 ../src/youtube/scope/query.cpp:719
+#: ../src/youtube/scope/query.cpp:637
+msgid "No channel can be found"
+msgstr "No se ha encontrado ningún canal"
+
+#: ../src/youtube/scope/query.cpp:648 ../src/youtube/scope/query.cpp:895
 msgid "Playlists"
 msgstr "Listas de reproducción"
 
-#: ../src/youtube/scope/query.cpp:579
+#: ../src/youtube/scope/query.cpp:676
+msgid "No playlist can be found in this channel"
+msgstr "No hay ninguna lista de reproducción en este canal"
+
+#: ../src/youtube/scope/query.cpp:687
 msgid "Playlist contents"
 msgstr "Contenido de la lista"
 
-#: ../src/youtube/scope/query.cpp:596
+#: ../src/youtube/scope/query.cpp:704
 msgid "Channel contents"
 msgstr "Contenido del canal"
 
-#: ../src/youtube/scope/query.cpp:643 ../src/youtube/scope/query.cpp:685
+#: ../src/youtube/scope/query.cpp:724
+msgid "No video can be found"
+msgstr "No se ha encontrado ningún vídeo"
+
+#: ../src/youtube/scope/query.cpp:777
+msgid "Likes"
+msgstr "Me gusta"
+
+#: ../src/youtube/scope/query.cpp:798 ../src/youtube/scope/query.cpp:840
 msgid "My Subscriptions"
 msgstr "Mis suscripciones"
 
-#: ../src/youtube/scope/query.cpp:858
+#: ../src/youtube/scope/query.cpp:808 ../src/youtube/scope/query.cpp:861
+msgid "My Playlist"
+msgstr "Mi lista de reproducción"
+
+#: ../src/youtube/scope/query.cpp:1035
 #, c-format
 msgid "1 result from YouTube"
 msgid_plural "%d results from YouTube"
 msgstr[0] "1 resultado de YouTube"
 msgstr[1] "%d resultados de YouTube"
 
-#: ../src/youtube/scope/query.cpp:872
+#: ../src/youtube/scope/query.cpp:1049
 msgid "YouTube requires an internet connection"
 msgstr "YouTube necesita una conexión a Internet"
 
-#: ../src/youtube/scope/preview.cpp:78
-#, c-format
-msgid "1 view"
-msgid_plural "%d views"
-msgstr[0] "1 visualización"
-msgstr[1] "%d visualizaciones"
+#: ../src/youtube/scope/preview.cpp:79
+msgid " views"
+msgstr " vistas"
+
+#: ../src/youtube/scope/preview.cpp:97
+msgid "<br/>  Published on: </b>"
+msgstr "<br/>  Publicado: </b>"
+
+#: ../src/youtube/scope/preview.cpp:102
+msgid "Please login to post a comment  "
+msgstr "Acceda para enviar un comentario  "
+
+#: ../src/youtube/scope/preview.cpp:108
+msgid "open"
+msgstr "abierto"
+
+#: ../src/youtube/scope/preview.cpp:109
+msgid "Login to youtube"
+msgstr "Acceder a Youtube"
+
+#: ../src/youtube/scope/preview.cpp:130
+msgid "Unsubscribe"
+msgstr "Darse de baja"
+
+#: ../src/youtube/scope/preview.cpp:130
+msgid "Subscribe"
+msgstr "Suscribirse"
+
+#: ../src/youtube/scope/preview.cpp:134
+msgid "Thumb up"
+msgstr ""
+
+#: ../src/youtube/scope/preview.cpp:138
+msgid "Thumb down"
+msgstr ""
+
+#: ../src/youtube/scope/preview.cpp:142
+msgid "Add to watch list"
+msgstr "Añadir a la lista de seguimiento"
+
+#: ../src/youtube/scope/preview.cpp:146
+msgid "Add to favorites list"
+msgstr "Añadir a la lista de favoritos"
+
+#: ../src/youtube/scope/preview.cpp:152 ../src/youtube/scope/preview.cpp:297
+msgid "User channel"
+msgstr "Canal de usuario"
+
+#: ../src/youtube/scope/preview.cpp:161
+msgid "Post"
+msgstr "Publicar"
+
+#: ../src/youtube/scope/preview.cpp:290
+msgid "View in browser"
+msgstr "Ver en el navegador"
