--- a/po/fi.po
+++ b/po/fi.po
@@ -1,16 +1,16 @@
-# Friulian translation for unity-scope-youtube
-# Copyright (c) 2015 Rosetta Contributors and Canonical Ltd 2015
+# Finnish translation for unity-scope-youtube
+# Copyright (c) 2016 Rosetta Contributors and Canonical Ltd 2016
 # This file is distributed under the same license as the unity-scope-youtube package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2015.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2016.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: unity-scope-youtube\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2016-08-19 09:13+0000\n"
-"PO-Revision-Date: 2015-01-28 16:31+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Friulian <fur@li.org>\n"
+"PO-Revision-Date: 2016-08-19 09:49+0000\n"
+"Last-Translator: Jiri Grönroos <Unknown>\n"
+"Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -21,124 +21,124 @@ msgstr ""
 #: ../data/com.ubuntu.scopes.youtube.ini.in.h:1
 #: ../src/youtube/scope/query.cpp:733
 msgid "YouTube"
-msgstr ""
+msgstr "YouTube"
 
 #: ../data/com.ubuntu.scopes.youtube.ini.in.h:2
 msgid "Search YouTube for videos and browse channels"
-msgstr ""
+msgstr "Etsi videoita YouTubesta ja selaa kanavia"
 
 #: ../src/youtube/scope/query.cpp:309 ../src/youtube/scope/query.cpp:778
 msgid "Favorites"
-msgstr ""
+msgstr "Suosikit"
 
 #: ../src/youtube/scope/query.cpp:310 ../src/youtube/scope/query.cpp:779
 msgid "Watch Later"
-msgstr ""
+msgstr "Katso myöhemmin"
 
 #: ../src/youtube/scope/query.cpp:321
 #, c-format
 msgid "1 subscriber"
 msgid_plural "%d subscribers"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 tilaaja"
+msgstr[1] "%d tilaajaa"
 
 #: ../src/youtube/scope/query.cpp:360
 #, c-format
 msgid "1 video"
 msgid_plural "%d videos"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 video"
+msgstr[1] "%d videota"
 
 #: ../src/youtube/scope/query.cpp:403
 msgid "</b> videos"
-msgstr ""
+msgstr "</b> videota"
 
 #: ../src/youtube/scope/query.cpp:404
 msgid "</b> views"
-msgstr ""
+msgstr "</b> katselukertaa"
 
 #: ../src/youtube/scope/query.cpp:405
 msgid "</b> subscribers"
-msgstr ""
+msgstr "</b> tilaajaa"
 
 #: ../src/youtube/scope/query.cpp:460
 msgid "Log-in to YouTube"
-msgstr ""
+msgstr "Kirjaudu YouTubeen"
 
 #: ../src/youtube/scope/query.cpp:565
 msgid "Uploads"
-msgstr ""
+msgstr "Lähetetyt"
 
 #: ../src/youtube/scope/query.cpp:585 ../src/youtube/scope/query.cpp:889
 msgid "Videos"
-msgstr ""
+msgstr "Videot"
 
 #: ../src/youtube/scope/query.cpp:612
 msgid "No video can be found in this channel"
-msgstr ""
+msgstr "Tältä kanavalta ei löytynyt videoita"
 
 #: ../src/youtube/scope/query.cpp:623 ../src/youtube/scope/query.cpp:901
 msgid "Channels"
-msgstr ""
+msgstr "Kanavat"
 
 #: ../src/youtube/scope/query.cpp:637
 msgid "No channel can be found"
-msgstr ""
+msgstr "Kanavaa ei löydy"
 
 #: ../src/youtube/scope/query.cpp:648 ../src/youtube/scope/query.cpp:895
 msgid "Playlists"
-msgstr ""
+msgstr "Soittolistat"
 
 #: ../src/youtube/scope/query.cpp:676
 msgid "No playlist can be found in this channel"
-msgstr ""
+msgstr "Tältä kanavalta ei löyty soittolistaa"
 
 #: ../src/youtube/scope/query.cpp:687
 msgid "Playlist contents"
-msgstr ""
+msgstr "Soittolistan sisältö"
 
 #: ../src/youtube/scope/query.cpp:704
 msgid "Channel contents"
-msgstr ""
+msgstr "Kanavan sisältö"
 
 #: ../src/youtube/scope/query.cpp:724
 msgid "No video can be found"
-msgstr ""
+msgstr "Videota ei löydy"
 
 #: ../src/youtube/scope/query.cpp:777
 msgid "Likes"
-msgstr ""
+msgstr "Tykkäykset"
 
 #: ../src/youtube/scope/query.cpp:798 ../src/youtube/scope/query.cpp:840
 msgid "My Subscriptions"
-msgstr ""
+msgstr "Omat tilaukset"
 
 #: ../src/youtube/scope/query.cpp:808 ../src/youtube/scope/query.cpp:861
 msgid "My Playlist"
-msgstr ""
+msgstr "Oma soittolista"
 
 #: ../src/youtube/scope/query.cpp:1035
 #, c-format
 msgid "1 result from YouTube"
 msgid_plural "%d results from YouTube"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 tulos YouTubesta"
+msgstr[1] "%d tulosta YouTubesta"
 
 #: ../src/youtube/scope/query.cpp:1049
 msgid "YouTube requires an internet connection"
-msgstr ""
+msgstr "YouTube vaatii internetyhteyden"
 
 #: ../src/youtube/scope/preview.cpp:79
 msgid " views"
-msgstr ""
+msgstr " katselukertaa"
 
 #: ../src/youtube/scope/preview.cpp:97
 msgid "<br/>  Published on: </b>"
-msgstr ""
+msgstr "<br/>  Julkaistu: </b>"
 
 #: ../src/youtube/scope/preview.cpp:102
 msgid "Please login to post a comment  "
-msgstr ""
+msgstr "Kirjaudu kommentoidaksesi  "
 
 #: ../src/youtube/scope/preview.cpp:108
 msgid "open"
@@ -146,40 +146,40 @@ msgstr ""
 
 #: ../src/youtube/scope/preview.cpp:109
 msgid "Login to youtube"
-msgstr ""
+msgstr "Kirjaudu YouTubeen"
 
 #: ../src/youtube/scope/preview.cpp:130
 msgid "Unsubscribe"
-msgstr ""
+msgstr "Lopeta tilaus"
 
 #: ../src/youtube/scope/preview.cpp:130
 msgid "Subscribe"
-msgstr ""
+msgstr "Tilaa"
 
 #: ../src/youtube/scope/preview.cpp:134
 msgid "Thumb up"
-msgstr ""
+msgstr "Peukku ylös"
 
 #: ../src/youtube/scope/preview.cpp:138
 msgid "Thumb down"
-msgstr ""
+msgstr "Peukku alas"
 
 #: ../src/youtube/scope/preview.cpp:142
 msgid "Add to watch list"
-msgstr ""
+msgstr "Lisää katsomislistaan"
 
 #: ../src/youtube/scope/preview.cpp:146
 msgid "Add to favorites list"
-msgstr ""
+msgstr "Lisää suosikkilistaan"
 
 #: ../src/youtube/scope/preview.cpp:152 ../src/youtube/scope/preview.cpp:297
 msgid "User channel"
-msgstr ""
+msgstr "Käyttäjäkanava"
 
 #: ../src/youtube/scope/preview.cpp:161
 msgid "Post"
-msgstr ""
+msgstr "Lähetä"
 
 #: ../src/youtube/scope/preview.cpp:290
 msgid "View in browser"
-msgstr ""
+msgstr "Katso selaimessa"
