--- a/po/pl.po
+++ b/po/pl.po
@@ -7,20 +7,20 @@ msgid ""
 msgstr ""
 "Project-Id-Version: unity-scope-youtube\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2015-05-25 11:06+0100\n"
-"PO-Revision-Date: 2015-10-22 17:48+0000\n"
-"Last-Translator: Bartosz Kosiorek <Unknown>\n"
+"POT-Creation-Date: 2016-08-19 09:13+0000\n"
+"PO-Revision-Date: 2016-08-19 13:11+0000\n"
+"Last-Translator: GTriderXC <gtriderxc@yahoo.com>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2016-04-01 05:58+0000\n"
-"X-Generator: Launchpad (build 17972)\n"
+"X-Launchpad-Export-Date: 2016-08-20 06:13+0000\n"
+"X-Generator: Launchpad (build 18176)\n"
 
 #: ../data/com.ubuntu.scopes.youtube.ini.in.h:1
-#: ../src/youtube/scope/query.cpp:611
+#: ../src/youtube/scope/query.cpp:733
 msgid "YouTube"
 msgstr "YouTube"
 
@@ -28,7 +28,15 @@ msgstr "YouTube"
 msgid "Search YouTube for videos and browse channels"
 msgstr "Przeszukaj YouTube w celu odnalezenia filmów oraz przeglądaj kanały"
 
-#: ../src/youtube/scope/query.cpp:269
+#: ../src/youtube/scope/query.cpp:309 ../src/youtube/scope/query.cpp:778
+msgid "Favorites"
+msgstr "Ulubione"
+
+#: ../src/youtube/scope/query.cpp:310 ../src/youtube/scope/query.cpp:779
+msgid "Watch Later"
+msgstr "Obejrzyj później"
+
+#: ../src/youtube/scope/query.cpp:321
 #, c-format
 msgid "1 subscriber"
 msgid_plural "%d subscribers"
@@ -36,7 +44,7 @@ msgstr[0] "1 prenumerator"
 msgstr[1] "%d prenumeratorów"
 msgstr[2] "%d prenumeratorów"
 
-#: ../src/youtube/scope/query.cpp:308
+#: ../src/youtube/scope/query.cpp:360
 #, c-format
 msgid "1 video"
 msgid_plural "%d videos"
@@ -44,39 +52,75 @@ msgstr[0] "1 film"
 msgstr[1] "%d filmy"
 msgstr[2] "%d filmów"
 
-#: ../src/youtube/scope/query.cpp:357
+#: ../src/youtube/scope/query.cpp:403
+msgid "</b> videos"
+msgstr "</b> filmy(-ów)"
+
+#: ../src/youtube/scope/query.cpp:404
+msgid "</b> views"
+msgstr "</b> wyświetleń"
+
+#: ../src/youtube/scope/query.cpp:405
+msgid "</b> subscribers"
+msgstr "</b> prenumeratorów"
+
+#: ../src/youtube/scope/query.cpp:460
 msgid "Log-in to YouTube"
 msgstr "Zaloguj do YouTube"
 
-#: ../src/youtube/scope/query.cpp:475
+#: ../src/youtube/scope/query.cpp:565
 msgid "Uploads"
 msgstr "Wysłane"
 
-#: ../src/youtube/scope/query.cpp:495 ../src/youtube/scope/query.cpp:713
+#: ../src/youtube/scope/query.cpp:585 ../src/youtube/scope/query.cpp:889
 msgid "Videos"
 msgstr "Filmy"
 
-#: ../src/youtube/scope/query.cpp:527 ../src/youtube/scope/query.cpp:725
+#: ../src/youtube/scope/query.cpp:612
+msgid "No video can be found in this channel"
+msgstr "Nie odnaleziono żadnych filmów na tym kanale"
+
+#: ../src/youtube/scope/query.cpp:623 ../src/youtube/scope/query.cpp:901
 msgid "Channels"
 msgstr "Kanały"
 
-#: ../src/youtube/scope/query.cpp:546 ../src/youtube/scope/query.cpp:719
+#: ../src/youtube/scope/query.cpp:637
+msgid "No channel can be found"
+msgstr "Nie odnaleziono żadnego kanału"
+
+#: ../src/youtube/scope/query.cpp:648 ../src/youtube/scope/query.cpp:895
 msgid "Playlists"
 msgstr "Listy odtwarzania"
 
-#: ../src/youtube/scope/query.cpp:579
+#: ../src/youtube/scope/query.cpp:676
+msgid "No playlist can be found in this channel"
+msgstr "Nie odnaleziono żadnych list odtwarzania na tym kanale"
+
+#: ../src/youtube/scope/query.cpp:687
 msgid "Playlist contents"
 msgstr "Zawartość listy odtwarzania"
 
-#: ../src/youtube/scope/query.cpp:596
+#: ../src/youtube/scope/query.cpp:704
 msgid "Channel contents"
 msgstr "Zawartość kanału"
 
-#: ../src/youtube/scope/query.cpp:643 ../src/youtube/scope/query.cpp:685
+#: ../src/youtube/scope/query.cpp:724
+msgid "No video can be found"
+msgstr "Nie odnaleziono żadnych filmów"
+
+#: ../src/youtube/scope/query.cpp:777
+msgid "Likes"
+msgstr "Polubienia"
+
+#: ../src/youtube/scope/query.cpp:798 ../src/youtube/scope/query.cpp:840
 msgid "My Subscriptions"
 msgstr "Moje subskrypcje"
 
-#: ../src/youtube/scope/query.cpp:858
+#: ../src/youtube/scope/query.cpp:808 ../src/youtube/scope/query.cpp:861
+msgid "My Playlist"
+msgstr "Moja Playlista"
+
+#: ../src/youtube/scope/query.cpp:1035
 #, c-format
 msgid "1 result from YouTube"
 msgid_plural "%d results from YouTube"
@@ -84,14 +128,62 @@ msgstr[0] "1 wynik z YouTube"
 msgstr[1] "%d wyniki z YouTube"
 msgstr[2] "%d wyników z YouTube"
 
-#: ../src/youtube/scope/query.cpp:872
+#: ../src/youtube/scope/query.cpp:1049
 msgid "YouTube requires an internet connection"
 msgstr "YouTube wymaga połączenia internetowego"
 
-#: ../src/youtube/scope/preview.cpp:78
-#, c-format
-msgid "1 view"
-msgid_plural "%d views"
-msgstr[0] "1 obejrzenie"
-msgstr[1] "%d obejrzenia"
-msgstr[2] "%d obejrzeń"
+#: ../src/youtube/scope/preview.cpp:79
+msgid " views"
+msgstr " wyświetleń"
+
+#: ../src/youtube/scope/preview.cpp:97
+msgid "<br/>  Published on: </b>"
+msgstr "<br/>  Wydany: </b>"
+
+#: ../src/youtube/scope/preview.cpp:102
+msgid "Please login to post a comment  "
+msgstr "Zaloguj się, by dodać komentarz  "
+
+#: ../src/youtube/scope/preview.cpp:108
+msgid "open"
+msgstr "otwórz"
+
+#: ../src/youtube/scope/preview.cpp:109
+msgid "Login to youtube"
+msgstr "Logowanie do Youtube"
+
+#: ../src/youtube/scope/preview.cpp:130
+msgid "Unsubscribe"
+msgstr "Zrezygnuj z subskrypcji"
+
+#: ../src/youtube/scope/preview.cpp:130
+msgid "Subscribe"
+msgstr "Subskrybuj"
+
+#: ../src/youtube/scope/preview.cpp:134
+msgid "Thumb up"
+msgstr "Kciuk w górę"
+
+#: ../src/youtube/scope/preview.cpp:138
+msgid "Thumb down"
+msgstr "Kciuk w dół"
+
+#: ../src/youtube/scope/preview.cpp:142
+msgid "Add to watch list"
+msgstr "Obejrzę później"
+
+#: ../src/youtube/scope/preview.cpp:146
+msgid "Add to favorites list"
+msgstr "Dodaj do listy ulubionych"
+
+#: ../src/youtube/scope/preview.cpp:152 ../src/youtube/scope/preview.cpp:297
+msgid "User channel"
+msgstr "Kanał użytkownika"
+
+#: ../src/youtube/scope/preview.cpp:161
+msgid "Post"
+msgstr "Opublikuj"
+
+#: ../src/youtube/scope/preview.cpp:290
+msgid "View in browser"
+msgstr "Wyświetl w przeglądarce"
