--- a/po/gl.po
+++ b/po/gl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: unity-scope-youtube\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2016-08-19 09:13+0000\n"
-"PO-Revision-Date: 2016-08-19 22:59+0000\n"
+"PO-Revision-Date: 2016-08-20 10:03+0000\n"
 "Last-Translator: Marcos Lans <Unknown>\n"
 "Language-Team: Galician <gl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2016-08-20 06:13+0000\n"
+"X-Launchpad-Export-Date: 2016-08-22 05:51+0000\n"
 "X-Generator: Launchpad (build 18176)\n"
 
 #: ../data/com.ubuntu.scopes.youtube.ini.in.h:1
@@ -91,19 +91,19 @@ msgstr "Listas de reprodución"
 
 #: ../src/youtube/scope/query.cpp:676
 msgid "No playlist can be found in this channel"
-msgstr ""
+msgstr "Non foi posíbel atopar unha lista de reprodución nesta canle"
 
 #: ../src/youtube/scope/query.cpp:687
 msgid "Playlist contents"
-msgstr ""
+msgstr "Contidos da lista"
 
 #: ../src/youtube/scope/query.cpp:704
 msgid "Channel contents"
-msgstr ""
+msgstr "Contidos da canle"
 
 #: ../src/youtube/scope/query.cpp:724
 msgid "No video can be found"
-msgstr ""
+msgstr "Non foi posíbel atopar vídeos"
 
 #: ../src/youtube/scope/query.cpp:777
 msgid "Likes"
@@ -111,26 +111,26 @@ msgstr "Gústames"
 
 #: ../src/youtube/scope/query.cpp:798 ../src/youtube/scope/query.cpp:840
 msgid "My Subscriptions"
-msgstr ""
+msgstr "As miñas subscricións"
 
 #: ../src/youtube/scope/query.cpp:808 ../src/youtube/scope/query.cpp:861
 msgid "My Playlist"
-msgstr ""
+msgstr "A miña lista"
 
 #: ../src/youtube/scope/query.cpp:1035
 #, c-format
 msgid "1 result from YouTube"
 msgid_plural "%d results from YouTube"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 resultado de YouTube"
+msgstr[1] "%d resultados de YouTube"
 
 #: ../src/youtube/scope/query.cpp:1049
 msgid "YouTube requires an internet connection"
-msgstr ""
+msgstr "YouTube require unha conexión a internet"
 
 #: ../src/youtube/scope/preview.cpp:79
 msgid " views"
-msgstr ""
+msgstr " visualizacións"
 
 #: ../src/youtube/scope/preview.cpp:97
 msgid "<br/>  Published on: </b>"
@@ -138,7 +138,7 @@ msgstr "<br/>  Publicado: </b>"
 
 #: ../src/youtube/scope/preview.cpp:102
 msgid "Please login to post a comment  "
-msgstr ""
+msgstr "Inicie sesión para publicar un comentario  "
 
 #: ../src/youtube/scope/preview.cpp:108
 msgid "open"
@@ -166,7 +166,7 @@ msgstr "Polgar abaixo"
 
 #: ../src/youtube/scope/preview.cpp:142
 msgid "Add to watch list"
-msgstr ""
+msgstr "Engadir á lista de seguimentos"
 
 #: ../src/youtube/scope/preview.cpp:146
 msgid "Add to favorites list"
